# rust-gpt

./: Cargo.toml  README.md
src/: lib.rs  main.rs  middleware.rs
src/ai/: stream.rs
src/data/: mod.rs  model.rs  repository.rs
src/router/app/: app.rs  auth.rs  blog.rs  chat.rs  error.rs  home.rs  mod.rs  settings.rs
