[package]
name = "rust-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
chrono = { version = "0.4.37", features = ["serde"] }
comrak = "0.22.0"
dotenv = "0.15.0"
futures = "0.3.30"
hyper = "1.2.0"
reqwest = { version = "0.12.3", features = ["json"] }
reqwest-eventsource = "0.6.0"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio", "chrono"] }
tera = "1.19.1"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["cors","fs"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tracing = "0.1.40"

[profile.release]
opt-level = 3
lto = true
rpath = false
incremental = false
overflow-checks = false
strip = "symbols"